--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "react-toastify": "^9.1.3",
         "react-transition-group": "^4.4.5",
         "react-virtualized": "^9.22.5",
+        "recharts": "^3.6.0",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
         "trackjs": "^3.10.4",
